// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert error renders correctly 1`] = `
<DocumentFragment>
  <div
    class="alert alert--error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert success renders correctly 1`] = `
<DocumentFragment>
  <div
    class="alert alert--success"
  >
    Success!
  </div>
</DocumentFragment>
`;
